--- a/UPVESH/css/skins/pink.css
+++ b/UPVESH/css/skins/pink.css
@@ -15,6 +15,8 @@
 .aside .nav li a.active  {
     color: #ec1839;
 }
+.about .about-content .timeline .circle-dot,
+.about .about-content .timeline .timeline-item::before,
 .about .about-content .skills .skill-item .progress .progress-in,
 .section-title h2::before,
 .section-title h2::after,
