--- a/UPVESH/css/style.css
+++ b/UPVESH/css/style.css
@@ -401,16 +401,79 @@ body {
     color: #302e4d;
 }
 .about .about-content .education{
-    background-color: red;
+    /* background-color: red; */
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
     max-width: 50%;
     margin-top: 30px;
 }
 .about .about-content .experience{
-    background-color: blue;
+    /* background-color: blue; */
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
     max-width: 50%;
     margin-top: 30px;
+}
+.about .about-content h3.title{
+    font-size: 24px;
+    font-weight: 700;
+    color: #302e4d;
+    margin-bottom: 30px;
+}
+.about .about-content .timeline-box{
+    -ms-flex: 0 0 100%;
+    max-width: 100%;
+    flex: 0 0 100%;
+}
+.about .about-content .timeline{
+    background-color: #fdf9ff;
+    padding: 30px 15px;
+    border: 1px solid #d4d4e3;
+    border-radius: 10px;
+    width: 100%;
+}
+.about .about-content .timeline .timeline-item{
+    position: relative;
+    padding-left: 37px;
+}
+.about .about-content .timeline .timeline-item:last-child{
+    padding-bottom: 0;
+}
+.about .about-content .timeline .timeline-item::before{
+    content: '';
+    width: 1px;
+    position: absolute;
+    height: 100%;
+    left: 7px;
+    top: 0;
+}
+.about .about-content .timeline .circle-dot{
+    position:absolute;
+    left: 0;
+    top: 0;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+}
+.about .about-content .timeline .timeline-date{
+    font-weight: 400;
+    margin-bottom: 12px;
+    color: #504e70;
+    font-size: 14px;
+}
+.about .about-content .timeline .timeline-date .fa{
+    margin-right: 5px;
+}
+.about .about-content .timeline .timeline-title{
+    font-weight: 700;
+    font-size: 18px;
+    margin-bottom: 15px;
+    text-transform: capitalize;
+    color: #302e4d;
+}
+.about .about-content .timeline .timeline-text{
+    font-size: 16px;
+    line-height: 25px;
+    color: #504e70;
+    margin: 0;
 }
