form-detail-for-employee

--- a/MISALibraryControl/css/base/pagination.css
+++ b/MISALibraryControl/css/base/pagination.css
@@ -33,10 +33,15 @@
             width: 25px;
             height: 25px;
             border-radius: 50%;
-            background-color: #e5e5e5;
+            background-color: #ffffff;
             margin: 0 5px;
             display: flex;
             justify-content: center;
             align-items: center;
+            border: 1px solid #e5e5e5e5;
+        }
+
+        .number-page>.number:hover{
+            background-color: #e5e5e5e5;
         }
             
