--- a/MISALibraryControl/css/base/input.css
+++ b/MISALibraryControl/css/base/input.css
@@ -1,6 +1,5 @@
 .misa-input{
     outline: none;
-    padding: 0;
     border-radius: 5px;
     height: 28px;
     color: #000000;
@@ -8,6 +7,7 @@
     border: 1px solid #DBDEFF;
     padding: 4px;
     font-size: 12px;
+    width: 100%;
 }
 .misa-input:focus{
     outline: none;
