--- a/MISALibraryControl/css/base/modal.css
+++ b/MISALibraryControl/css/base/modal.css
@@ -1,27 +1,44 @@
-    .modal {
-        display: none;
-        position: fixed;
-        z-index: 1;
-        padding-top: 100px;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        background-color: rgb(0,0,0);
-        background-color: rgba(0,0,0,0.4);
-    }
-    .modal-content {
+.modal {
+    position: fixed;
+    z-index: 1;
+    padding-top: 20px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+    .modal>.container{
         background-color: #fefefe;
-        margin: auto;
-        padding: 20px;
-        border: 1px solid #888;
         width: 80%;
+        margin: 0 auto;
     }
-    .close {
-        color: #aaaaaa;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-    }
+        .container>.modal-header{
+            display: flex;
+            flex-direction: row;
+            padding: 24px;
+            position: relative;
+        }
+            .modal-header>.close{
+                font-weight: bold;
+                position: absolute;
+                top: 0;
+                right: 0;
+                font-size: 28px;
+                padding: 0 10px;
+            }
+        .container>.modal-content {
+            min-height: calc(100vh - 300px);
+            padding: 0 24px;
+        }
+    
+        .container>.modal-footer{
+            height: 60px;
+            background-color: #e5e5e5;
+            padding: 0 24px;
+        }
+    
     
