--- a/MISALibraryControl/css/base/input.css
+++ b/MISALibraryControl/css/base/input.css
@@ -1,52 +1,60 @@
-.misa-input{
-    outline: none;
-    border-radius: 5px;
-    height: 28px;
-    color: #000000;
-    font-family: 'GoogleSans-Regular';
-    border: 1px solid #DBDEFF;
-    padding: 4px;
-    font-size: 12px;
-    width: 100%;
+
+/* core search box */
+.search-box{
+    border: 1px solid #BBBBBB;
+    border-radius: 4px;
+    
 }
-.misa-input:focus{
+.search-box:hover{
+    border: 1px solid #01b075;
+}
+.box{
+    display: flex;
+}
+.search-icon-site{
+    width: 16px;
+    height: 16px;
+    align-self: center;
+    margin: 0 8px 0 16px;
+}
+.search-icon-site>i{
+    font-size: 16px;
+    color: #BBBBBB;
+}
+.input-search{
+    border: none;
     outline: none;
+    width: 100%;
+    height: 38px;
+    font-family: 'GoogleSans-Regular';
+    font-size: 13px;
+    padding-right: 16px;
+}
+/* end core search box */
+
+/* core input label */
+.label {
+    padding: 0;
+    margin: 0;
+    padding-bottom: 4px;
+    font-size: 13px;
+
+}
+
+.input {
+    outline: none;
+    border: 1px solid;
+    border-color: #bbbbbb;
+    height: 40px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    padding-left: 16px;
+    padding-right: 16px;
+    font-size: 12px;
+}
+
+.input:focus {
     border: 1px solid #01b075;
 }
 
-
-.misa-input-group{
-    background: #ffffff;
-    color: #bbbbbb;
-    font-family: 'GoogleSans-Italic';
-    height: 40px;
-    font-size: 12px;
-    border: 1px solid #DBDEFF;
-    padding: 0 8px;
-    border-radius: 5px;
-    
-}
-    .misa-input-group>.misa-input-text{
-        border: none;
-        outline: none;
-        line-height: 38px;
-        padding: 0;
-        width: 80%;
-    }
-    .misa-input-group>.misa-input-text::placeholder{
-        color: #bbbbbb;
-        font-family: 'GoogleSans-Italic';
-    }
-
-
-
-.misa-input-group-prepend{
-    display: inline-block;
-}
-.misa-input-group-text{
-    font-size: 16px;
-    padding: 0 8px;
-    line-height: 40px;
-    
-}
-
+/* end core input label */
