--- a/MISALibraryControl/css/page/employee-detail.css
+++ b/MISALibraryControl/css/page/employee-detail.css
@@ -1,48 +1,30 @@
-.modal-action{
-    display: flex;
-    flex-direction: row;
-    height: 60px;
+.avatar-box{
+    padding: 0 24px;
 }
-    .modal-action>.action-box{
-        display: flex;
-        margin-left: auto;
-        align-self: center;
-    }
-        .action-box>button{
-            margin-left: 16px;
-        }
-    
-        .avatar-site{
-            background: url('/content/img/default-avatar.jpg');
-            background-repeat: no-repeat;
-            background-size: contain;
-            height: auto;
-            width: 100%;
-            border-radius: 50%;
-            background-color: #ffffff;
-            border: 1px solid #e5e5e5;
-        }
-.container-right{
-    padding: 8px;
-    padding-right: 0;
+
+.avatar-site {
+    background: url('/content/img/default-avatar.jpg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 150px;
+    height: 150px;
+
+    background-size: contain;
+    border-radius: 50%;
+    background-color: #ffffff;
+    border: 1px solid #e5e5e5;
 }
-.container-left{
-    padding: 8px;
-    padding-left: 16px;
-}
+
 .col-item{
-    min-height: 70px;
-}
-.input-site{
-    width: 98%;
+    width: 100%;
+    padding: 8px 0;
 }
 
-.misa-label{
-    padding-bottom: 4px;
-}
+    .col-item .input{
+        width: 100%;
+    }
 
-.progress{
-    width:15%;
-    height: 5px;
-    background-color: #019160;
+
+#detail-employee{
+    display: none;
 }
