--- a/MISALibraryControl/css/common/navbar.css
+++ b/MISALibraryControl/css/common/navbar.css
@@ -18,6 +18,7 @@
         }
 
             .toggle-icon{
+                cursor: pointer;
                 width: 24px;
                 height: 24px;
                 padding-right: 10px;
